--- a/app/Resources/views/estilo/edit.html.twig
+++ b/app/Resources/views/estilo/edit.html.twig
@@ -1,21 +1,28 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Estilo edit</h1>
+     <h1>Estilo edit</h1>
+    <div class="row">
+        <div class="col-xs-6">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    {{ form_start(edit_form) }}
+                    {#{ form_start(form, {"attr":{"novalidate":"novalidate"}}) }#}
+                    <div class="form-group col-xs-6">
+                            <label>{{ form_label(edit_form.descripcion) }}</label>
+                            {{ form_errors(edit_form.descripcion) }}
+                            {{ form_widget(edit_form.descripcion, {'attr' : {'class' : 'form-control'} }) }}
+                    </div>
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
+                    
+                </div>
+            </div>
+            <div class="panel-footer">
+                <input type="submit" value="Guardar" class="btn btn-primary" />
+                {{ form_end(edit_form) }}
+                <a href="{{ path('cerveza_index') }}" class="btn btn-default">Volver</a>
+            </div>
 
-    <ul>
-        <li>
-            <a href="{{ path('estilo_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+        </div>
+    </div>
 {% endblock %}
